# test-calculator-api

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: calculator.py  schemas.py
app/infrastructure/: memory_repository.py
app/model/: calculation.py
app/repository/: history_repository.py
app/service/: calculator_service.py
docs/: approach.md
docs/adr/: 001-tech-stack.md  002-testing-strategy.md  003-docker-e2e-strategy.md
scripts/: test.bat  test.sh
tests/: conftest.py
tests/e2e/: test_calculator_e2e.py
tests/integration/: test_calculator.py  test_calculator_api.py  test_history.py  test_history_api.py
tests/unit/: test_addition.py  test_division.py  test_multiplication.py  test_subtraction.py
tests/unit/operations/: test_addition.py  test_subtraction.py
tests/unit/service/: test_history.py  test_history_service.py
