[tool.poetry]
name = "test-calculator-api"
version = "0.1.0"
description = "A minimal FastAPI calculator with history tracking"
authors = ["Achilleas Ballanos <686446@student.inholland.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
pydantic = "^2.12.5"
pytest = "^9.0.2"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.13"
black = "^26.1.0"

[tool.pytest.ini_options]
pythonpath = "."

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
